# vertica-workday-compare

./: .gitignore  README.md  compare_service.py  db.py  index.html  jobs_store.py  main.py  make_sample_mapping.py  mapping_store.py  models.py  partials_trace_result.html  pyproject.toml  settings.py
app/: compare_service.py  db.py  main.py  mapping_store.py  models.py
mappings/: workday_mapping_sample.xlsx
scripts/: compare_excel_files.py  export_employee_tables.py  make_sample_mapping.py  run_vertica_sql.py
templates/: index.html  partials_compare_result.html
