[project]
name = "vertica-workday-compare"
version = "0.1.0"
description = "Localhost tooling for Workday table mapping, diffing, and employee trace across Vertica envs"
requires-python = ">=3.10"
authors = [{name="kellyclaw-ai", email="robertkelly024.ai@gmail.com"}]
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
  "pydantic>=2.7",
  "openpyxl>=3.1",
  "vertica-python>=1.4"
]

[tool.setuptools]
packages = ["app"]
